--- a/package.json
+++ b/package.json
@@ -5,6 +5,16 @@
   "description": "Air quality and pollen data from the Google maps platform",
   "main": "dist/lib/index.js",
   "types": "dist/lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/lib/index.d.ts",
+      "default": "./dist/lib/index.js"
+    },
+    "./pollen": {
+      "types": "./dist/lib/pollen/index.d.ts",
+      "default": "./dist/lib/pollen/index.js"
+    }
+  },
   "files": [
     "dist/lib"
   ],
