--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "homepage": "https://github.com/decarbonization/good-breathing#readme",
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "commander": "^12.1.0",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.1",
