Add 'aqi' npm keyword

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "keywords": [
     "google maps platform",
     "air quality",
+    "aqi",
     "pollen"
   ],
   "author": "P. Kevin Contreras",
